Refactor AnalyticsController class